[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name =  "openmeteo_sdk"
version = "0.0.0"
authors = [
    {name = "Patrick Zippenfenig", email = "info@open-meteo.com"},
]
description = "Open-Meteo Python SDK"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.8.1"
dependencies = [
  "flatbuffers>=24.0.0",
]

[project.urls]
Documentation = "https://github.com/open-meteo/sdk/tree/main#readme"
Source = "https://github.com/open-meteo/sdk"
Tracker = "https://github.com/open-meteo/sdk/issues"

[tool.flit.module]
name = "openmeteo_sdk"

[tool.hatch.version]
path = "python/openmeteo_sdk/__init__.py"

[tool.hatch.build.targets.sdist]
packages = ["python/openmeteo_sdk"]

[tool.hatch.build.targets.wheel]
packages = ["python/openmeteo_sdk"]
