[package]
name = "open-meteo-client"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Open-Meteo Weather API"
license = "MIT"

[dependencies]
open-meteo-sdk = { path = "../open-meteo-sdk", features = ["extensions"] }
reqwest = { version = "^0.11", features = ["blocking", "json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
